# i-make

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build.sh  pyproject.toml
docs/: TECK_STACK.md
gen2-facemesh/: main.py  main_depthai_camera.py  main_web_camera.py
gen2-facemesh/utils/: effect.py
i-make/: __main__.py  picture_blend_test.py  sample.py  test.py
i-make/dataclasses/: __init__.py  color.py  diagnosis.py  facepaint.py
i-make/libs/: diagnosis.py  effect.py  facemesh.py  jsonc.py  makeup.py  makeup_useful.py  parts_filter.py
i-make/mode/: __init__.py  base.py  custom.py  diagnosis.py  easy.py  event.py  practice.py
i-make/static/facepaints/diagnosis/: data.jsonc  data_test.jsonc
i-make/static/ui/: menu.html  single_effect.html
i-make/vue/: package-lock.json  package.json  vue.config.js
i-make/vue/public/: index.html
i-make/vue/src/: App.vue  main.js
i-make/vue/src/components/: Choice.vue  Video.vue
i-make/vue/src/router/: index.js
i-make/vue/src/views/: Menu.vue  Mode.vue  README.md  Settings.vue  TwoColumn.vue
imake/: __main__.py
imake/dataclasses/: color.py  diagnosis.py  facepaint.py
imake/libs/: diagnosis.py  effect.py  face_detection.py  facemesh.py  jsonc.py  list.py  palette.py
imake/mode/: __init__.py  base.py  config.py  custom.py  diagnosis.py  easy.py  event.py  practice.py
imake/static/modes/: README.md
imake/vue/: jsconfig.json  package-lock.json  package.json  vue.config.js
imake/vue/public/: index.html
imake/vue/src/: App.vue  main.js
res/: tech_stack.drawio
(+48 files in other folders)
